To Do, that is left-over. Or Plan
=================================

Not big things
- Showing as the alert box when any errors occurred ??
- Popup menu's default value; if there isn't the value of them, set first one.
- DIV._im_multivalue: Set muliti-line values to one field within the div element.
- Change the password from login panel.
- Users/Groups Administration user interface.

Issues
- The way to cancel (abandan) the editted data in a textfield. How can do it ?
- Check any HTML editor component.
- Check to mis-spelling terms in the definition file.

Toward Ver.1.1
- Database native authorization support.

Toward Ver.1.2
- Aspect programming into some call-back function and Data Access class.
- Set validation rules.
- Samples by PostgreSQL.

After Ver.1.3
- Media (Pictures, files etc.) Handling with Authentication/Authorization.
- Supports HTML5's datalist tag elements
- Objective handling for the data in database.
- Server side processing with Ruby on Rails or kind of.
- Single query can retrieve main and related tables simultaneously.
- Caching the result of queries.
- FileMaker's Find style database search. To do tha, the Recordset feature must be support for context.
- Transaction Support (updating=transaction)
- Store NULL for empty string.
- Multiple values within one field. (It may be required for FileMaker especially.)
- HTML5's local database supporting.
- Amazon Web Service supporting.

Mostly Slogan at anytime: or Should be done:
- Fulfilling documentation, including tutorials.
- Translating to English from Japanese Documents.

=================================
Known Issues for Browsers:
=================================
Internet Explorer 7
- Checkbox and Radio Button doesn't work. Oops! I won't fix it (I can't!).

Internet Explorer 6 or under are NOT supported!
FireFox/Safari/Chrome/Opera will work fine as for HTML5 supported version.
It's hard to check all versions above browsers as you know. I hope you understand.
