@@ -23,7 +23,6 @@ var INTERMediaotr_DBAdapter = {
                 authParams += "&response=" + encodeURIComponent(
                     INTERMediatorOnPage.publickey.biEncryptedString( INTERMediatorOnPage.authHashedPassword
                                                     + "\n" + INTERMediatorOnPage.authChallenge ));
-
             } else {
                 authParams += "&response=" + encodeURIComponent(
                     SHA1(INTERMediatorOnPage.authChallenge + INTERMediatorOnPage.authHashedPassword ));
@@ -47,25 +46,23 @@ var INTERMediaotr_DBAdapter = {
             myRequest.send( accessURL + authParams );
             eval( myRequest.responseText );
             if ( INTERMediator.debugMode > 1 )  {
-                INTERMediator.debugMessages.push(
-                    "myRequest.responseText=" + myRequest.responseText );
-                INTERMediator.debugMessages.push(
-                    "Return: resultCount=" + resultCount + ", dbresult=" + INTERMediatorLib.objectToString(dbresult));
-                INTERMediator.debugMessages.push(
-                    "Return: requireAuth=" + requireAuth + ", challenge=" + challenge + ", clientid="+clientid);
-                INTERMediator.debugMessages.push(
-                    "Return: newRecordKeyValue=" + newRecordKeyValue  );
+                INTERMediator.debugMessages.push( "myRequest.responseText=" + myRequest.responseText );
+                INTERMediator.debugMessages.push( "Return: resultCount=" + resultCount
+                    + ", dbresult=" + INTERMediatorLib.objectToString(dbresult) + "\n"
+                    + "Return: requireAuth=" + requireAuth
+                    + ", challenge=" + challenge + ", clientid="+clientid + "\n"
+                    + "Return: newRecordKeyValue=" + newRecordKeyValue );
             }
             if ( challenge != null )    {
                 INTERMediatorOnPage.authChallenge = challenge.substr(0, 24);
-                if ( !INTERMediatorOnPage.isNativeAuth ) {
+            //    if ( ! INTERMediatorOnPage.isNativeAuth ) {
                     INTERMediatorOnPage.authUserHexSalt = challenge.substr(24, 32);
                     INTERMediatorOnPage.authUserSalt = String.fromCharCode(
                         parseInt(challenge.substr(24, 2),16),
                         parseInt(challenge.substr(26, 2),16),
                         parseInt(challenge.substr(28, 2),16),
                         parseInt(challenge.substr(30, 2),16));
-                }
+            //    }
             }
             if ( clientid != null ) {
                 INTERMediatorOnPage.clientId = clientid;
